--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             background-color: white;
             opacity: 0.8;
             animation: moveStars 10s infinite linear;
+            transform: scale(1);
         }
 
         @keyframes moveStars {
@@ -224,14 +225,14 @@
 
     <script>
         // Movimento stelle
-        const starCount = 100;
+        const starCount = 200;
         const stars = [];
 
         // Generazione stelle
         for (let i = 0; i < starCount; i++) {
             const star = document.createElement('div');
             star.classList.add('star');
-            star.style.width = `${Math.random() * 3 + 1}px`;
+            star.style.width = `${Math.random() * 3 + 2}px`;
             star.style.height = star.style.width;
             star.style.top = `${Math.random() * window.innerHeight}px`;
             star.style.left = `${Math.random() * window.innerWidth}px`;
@@ -239,11 +240,11 @@
             stars.push(star);
         }
 
-        // Effetto parallax
+        // Effetto parallax con movimento lento delle stelle
         document.addEventListener('mousemove', (e) => {
             stars.forEach(star => {
-                let offsetX = (e.clientX - window.innerWidth / 2) * 0.05;
-                let offsetY = (e.clientY - window.innerHeight / 2) * 0.05;
+                let offsetX = (e.clientX - window.innerWidth / 2) * 0.03;
+                let offsetY = (e.clientY - window.innerHeight / 2) * 0.03;
                 star.style.transform = `translate(${offsetX}px, ${offsetY}px)`;
             });
         });
