--- a/index.html
+++ b/index.html
@@ -1,155 +1,166 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Elia Giordano</n<title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap" rel="stylesheet">
-    <style>
-        /* Reset e stili base */
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: 'Orbitron', sans-serif;
-            background-color: black;
-            color: white;
-            overflow-x: hidden;
-        }
-        /* Sfondo stelle */
-        .background {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            pointer-events: none;
-            z-index: -1;
-        }
-        .star {
-            position: absolute;
-            border-radius: 50%;
-            background-color: white;
-            opacity: 0.8;
-            width: 3px; height: 3px;
-            will-change: transform;
-        }
-        /* Menu */
-        nav {
-            position: fixed; top: 0; left: 0;
-            width: 100%; padding: 20px;
-            background-color: rgba(0,0,0,0.8);
-            z-index: 10; display: flex; justify-content: space-around;
-        }
-        nav a {
-            text-decoration: none; color: white;
-            font-size: 20px; font-weight: bold;
-            text-transform: uppercase; transition: color 0.3s ease;
-        }
-        nav a:hover { color: #00f; }
-        /* Sezioni */
-        section {
-            padding: 100px 20px 60px;
-            text-align: center; position: relative; z-index: 1;
-            /* rimosso background semitrasparente */
-        }
-        /* Intro */
-        #home h1 {
-            font-size: 3em; color: #00f; margin-bottom: 20px;
-            animation: textAnimation 1s forwards;
-            text-shadow: 0 0 10px #00f;
-        }
-        #home p {
-            font-size: 1.2em; color: #bbb; max-width: 800px; margin: 0 auto;
-            text-shadow: 0 0 5px #00f;
-        }
-        @keyframes textAnimation {
-            0% { transform: translateY(-50px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
-        }
-        /* Titoli */
-        h2 {
-            font-size: 2.5em; color: #00f; margin-bottom: 20px;
-            text-shadow: 0 0 10px #00f;
-        }
-        p {
-            font-size: 1.2em; color: #bbb; margin-bottom: 30px;
-            line-height: 1.5; max-width: 900px; margin: 0 auto 30px;
-            text-shadow: 0 0 5px #00f;
-        }
-        ul { list-style: none; padding: 0; }
-        ul li {
-            font-size: 1.2em; color: #bbb; margin: 10px 0;
-            transition: color 0.3s;
-            text-shadow: 0 0 5px #00f;
-        }
-        ul li:hover { color: #00f; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio - Elia Giordano</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap" rel="stylesheet">
+  <style>
+    /* Reset e stili base */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Orbitron', sans-serif;
+      background-color: black;
+      color: white;
+      overflow-x: hidden;
+    }
+    /* Sfondo stelle */
+    .background {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      pointer-events: none;
+      z-index: -1;
+    }
+    .star {
+      position: absolute;
+      border-radius: 50%;
+      background-color: white;
+      opacity: 0.8;
+      width: 3px; height: 3px;
+      will-change: transform;
+    }
+    /* Menu */
+    nav {
+      position: fixed; top: 0; left: 0;
+      width: 100%; padding: 20px;
+      background-color: rgba(0,0,0,0.8);
+      z-index: 10; display: flex; justify-content: space-around;
+    }
+    nav a {
+      text-decoration: none; color: white;
+      font-size: 20px; font-weight: bold;
+      text-transform: uppercase; transition: color 0.3s ease;
+    }
+    nav a:hover { color: #00f; }
+    /* Sezioni */
+    section {
+      padding: 120px 20px 60px;
+      text-align: center; position: relative; z-index: 1;
+    }
+    /* Intro */
+    #home h1 {
+      font-size: 3em; color: #00f; margin-bottom: 20px;
+      animation: textAnimation 1s forwards;
+      text-shadow: 0 0 10px #00f;
+    }
+    #home p {
+      font-size: 1.2em; color: #bbb; max-width: 800px; margin: 0 auto;
+      text-shadow: 0 0 5px #00f;
+    }
+    @keyframes textAnimation {
+      0% { transform: translateY(-50px); opacity: 0; }
+      100% { transform: translateY(0); opacity: 1; }
+    }
+    /* Titoli */
+    h2 {
+      font-size: 2.5em; color: #00f; margin-bottom: 20px;
+      text-shadow: 0 0 10px #00f;
+    }
+    p {
+      font-size: 1.2em; color: #bbb; margin-bottom: 30px;
+      line-height: 1.5; max-width: 900px; margin: 0 auto 30px;
+      text-shadow: 0 0 5px #00f;
+    }
+    ul { list-style: none; padding: 0; }
+    ul li {
+      font-size: 1.2em; color: #bbb; margin: 10px 0;
+      transition: color 0.3s;
+      text-shadow: 0 0 5px #00f;
+    }
+    ul li:hover { color: #00f; cursor: pointer; }
+  </style>
 </head>
 <body>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#chi-sono">Chi sono</a>
-        <a href="#competenze">Competenze</a>
-        <a href="#contatti">Contatti</a>
-    </nav>
-    <section id="home">
-        <h1>Benvenuto nel mio universo</h1>
-        <p>Presto troverai qui i miei progetti</p>
-    </section>
-    <section id="chi-sono">
-        <h2>Chi sono</h2>
-        <p>
-            Sono un appassionato di tecnologia, con un interesse particolare per il 3D e l'animazione.
-            Da autodidatta, ho sperimentato modellazione, rendering e animazioni, esplorando anche l’intelligenza artificiale.
-            Sebbene non abbia una formazione formale, sono determinato a imparare sempre cose nuove e a mettere in pratica ogni giorno le mie competenze.
-            La mia voglia di crescere mi spinge a studiare nuovi strumenti, tutorial e a partecipare a community online per migliorare continuamente.
-        </p>
-    </section>
-    <section id="competenze">
-        <h2>Competenze</h2>
-        <ul>
-            <li>Photoshop</li>
-            <li>Illustrator</li>
-            <li>InDesign</li>
-            <li>Inventor</li>
-            <li>3ds Max</li>
-            <li>AutoCAD</li>
-            <li>Blender</li>
-        </ul>
-    </section>
-    <section id="contatti">
-        <h2>Contatti</h2>
-        <p>Telefono: +39 3515749331</p>
-        <p>Email: <a href="mailto:elgio0926@gmail.com" style="color:#00f;">elgio0926@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/elia-giordano" target="_blank" style="color:#00f;">Elia Giordano</a></p>
-    </section>
-    <div class="background"></div>
-    <script>
-        const background = document.querySelector('.background');
-        const starCount = 200;
-        const stars = [];
-        for (let i = 0; i < starCount; i++) {
-            const star = document.createElement('div');
-            star.className = 'star';
-            star.style.width = `${Math.random() * 3 + 2}px`;
-            star.style.height = star.style.width;
-            star.style.top = `${Math.random() * window.innerHeight}px`;
-            star.style.left = `${Math.random() * window.innerWidth}px`;
-            background.appendChild(star);
-            stars.push(star);
-        }
-        document.addEventListener('mousemove', e => {
-            const cx = window.innerWidth / 2;
-            const cy = window.innerHeight / 2;
-            stars.forEach(star => {
-                const dx = (star.offsetLeft - e.clientX) * 0.03;
-                const dy = (star.offsetTop - e.clientY) * 0.03;
-                star.style.transform = `translate(${dx}px, ${dy}px)`;
-            });
-        });
-        window.addEventListener('resize', () => {
-            stars.forEach(star => {
-                star.style.top = `${Math.random() * window.innerHeight}px`;
-                star.style.left = `${Math.random() * window.innerWidth}px`;
-            });
-        });
-    </script>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#chi-sono">Chi sono</a>
+    <a href="#competenze">Competenze</a>
+    <a href="#contatti">Contatti</a>
+  </nav>
+
+  <section id="home">
+    <h1>Benvenuto nel mio universo</h1>
+    <p>Presto troverai qui i miei progetti</p>
+  </section>
+
+  <section id="chi-sono">
+    <h2>Chi sono</h2>
+    <p>
+      Sono un appassionato di tecnologia, con un interesse particolare per il 3D e l'animazione. 
+      Da autodidatta, ho sperimentato modellazione, rendering e animazioni, esplorando anche l’intelligenza artificiale. 
+      Sebbene non abbia una formazione formale, sono determinato a imparare sempre cose nuove e a mettere in pratica ogni giorno le mie competenze. 
+      La mia voglia di crescere mi spinge a studiare nuovi strumenti, tutorial e a partecipare a community online per migliorare continuamente.
+    </p>
+  </section>
+
+  <section id="competenze">
+    <h2>Competenze</h2>
+    <ul>
+      <li>Photoshop</li>
+      <li>Illustrator</li>
+      <li>InDesign</li>
+      <li>Inventor</li>
+      <li>3ds Max</li>
+      <li>AutoCAD</li>
+      <li>Blender</li>
+    </ul>
+  </section>
+
+  <section id="contatti">
+    <h2>Contatti</h2>
+    <p>Telefono: +39 3515749331</p>
+    <p>Email: <a href="mailto:elgio0926@gmail.com" style="color:#00f;">elgio0926@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/elia-giordano" target="_blank" style="color:#00f;">Elia Giordano</a></p>
+  </section>
+
+  <div class="background"></div>
+
+  <script>
+    const background = document.querySelector('.background');
+    const starCount = 200;
+    const stars = [];
+    
+    // Genera stelle
+    for (let i = 0; i < starCount; i++) {
+      const star = document.createElement('div');
+      star.className = 'star';
+      star.style.width = `${Math.random() * 3 + 1}px`;
+      star.style.height = star.style.width;
+      star.style.top = `${Math.random() * window.innerHeight}px`;
+      star.style.left = `${Math.random() * window.innerWidth}px`;
+      background.appendChild(star);
+      stars.push(star);
+    }
+
+    // Movimento stelle al mouse
+    document.addEventListener('mousemove', e => {
+      const cx = window.innerWidth / 2;
+      const cy = window.innerHeight / 2;
+      stars.forEach(star => {
+        const dx = (star.offsetLeft - e.clientX) * 0.05;
+        const dy = (star.offsetTop - e.clientY) * 0.05;
+        star.style.transform = `translate(${dx}px, ${dy}px)`;
+      });
+    });
+
+    // Ridistribuisci stelle al resize
+    window.addEventListener('resize', () => {
+      stars.forEach(star => {
+        star.style.top = `${Math.random() * window.innerHeight}px`;
+        star.style.left = `${Math.random() * window.innerWidth}px`;
+      });
+    });
+  </script>
 </body>
 </html>
